# razor_engine

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  macro_support.py
app/: main.cpp
configs/vscode/: launch.json  settings.json  tasks.json
ecs/: Cargo.toml
ecs/src/: lib.rs
src/: command_t.hpp  compile_options.hpp  entity_t.hpp  game_engine.rs  game_engine_t.cpp  game_engine_t.hpp  gui_sys.rs  input_sys.rs  input_system_t.hpp  logging.hpp  main.cpp  main.rs  render_sys.rs  render_system_t.hpp  sound_sys.rs  sound_system_t.hpp  system_t.hpp  utils.hpp
src/ability_system_t/: ability_t.hpp  action_t.hpp
src/damage_system_t/: damage_system_t.hpp
src/ecs/: component_t.hpp  entity_t.cpp  entity_t.hpp  system.rs  system_t.hpp
src/event_manager/: event_manager_t.hpp  event_t.cpp  event_t.hpp  inbuilt_event.hpp
src/gui_sys/: mod.rs
src/gui_system_t/: gui_system_t.hpp
src/input_system/: input_system_t.hpp  keyboard_t.hpp  mouse_t.hpp
src/movement_system_t/: movement_system_t.hpp
src/render_sys/: mod.rs  render_sys.rs
src/render_system/: render_system_t.hpp
tools/editor/: Cargo.toml
